# OC_Python_P10

./: Makefile  README.md  db.sqlite3  pyproject.toml  schema.yml
comments/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
front/: .eslintrc.json  package-lock.json  package.json
front/public/: index.html
front/src/: App.tsx  index.tsx  interfaces.tsx  urls.ts
front/src/components/: Issue.tsx  LoginForm.tsx  MessageBanner.tsx  Nav.tsx  PrivateRoute.tsx  ProjectTile.tsx
front/src/components/Register/: BirthDateInput.tsx  CanBeContactedCheckbox.tsx  CanDataBeSharedCheckbox.tsx  PasswordInput.tsx  RegisterForm.tsx  UsernameInput.tsx
front/src/components/inputs/: CanBeContactedCheckbox.tsx  CanDataBeSharedCheckbox.tsx  EmailInput.tsx
front/src/contexts/: AuthContext.tsx  MessageContext.tsx  ProjectContext.tsx
front/src/hooks/: useLogin.tsx  useRegister.tsx
front/src/pages/: Home.tsx  LoginForm.tsx  Project.tsx  Projects.tsx  RegisterForm.tsx
issues/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
issues/migrations/: 0001_initial.py  0002_initial.py
mocks/: issues.json  projects.json  users.json
projects/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_initial.py
projects/views/: comment_views.py  issue_views.py  project_views.py
users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_birthdate_user_can_be_contacted_and_more.py  0003_alter_user_birthdate.py  0004_alter_user_birthdate.py
